...
    },
    body: JSON.stringify(data),
  })
    .then(res => {
      return res.status === 403
        ? {
          success: false,
          statusCode: 403,
          message: '',
        }
        : res.json();
    })
    .catch(error => {
...
